crates/analyzer/tests/snapshots/errors__undefined_generic_type.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(\"[snippet]\", &src)"

---
error: undefined type
  ┌─ [snippet]:3:10
  │
3 │   let x: foobar<u256> = 10
  │          ^^^^^^ this type name has not been defined


